--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   </head>
   <body>
-    <div id="app" data-theme="light"></div>
+    <div id="app" data-theme="corporate"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
