--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <link href="/src/assets/main.css" rel="stylesheet" />
-    <link href="/src/assets/style.css" rel="stylesheet" />
+    <link href="./src/assets/main.css" rel="stylesheet" />
+    <link href="./src/assets/style.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
@@ -27,6 +27,6 @@
   </head>
   <body>
     <div id="app" data-theme="corporate"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
