--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
   </head>
   <body>
     <div id="app" data-theme="corporate"></div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
